# OS_course_project

./: CMakeLists.txt  README.md
client/: CMakeLists.txt
client/src/: CMakeLists.txt  client.cpp  client.h  main.cpp
lib/: CMakeLists.txt  json.h
server/: CMakeLists.txt
server/src/: CMakeLists.txt  main.cpp  server.cpp  server.h
